# Resume-Optimizer

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  next.config.ts  package-lock.json  package.json  tsconfig.json
app/: globals.css  layout.tsx  page.tsx
app/api/cache/: route.ts
app/api/export/: route.ts
app/api/generate/: route.ts
app/api/personas/generate/: route.ts
app/resume/: page.tsx
app/resume/[id]/critique/: page.tsx
components/: CritiquePanel.tsx  DebatePanel.tsx  DensityMeter.tsx  DiffViewer.tsx  ExportButton.tsx  HITLPanel.tsx  IterationInput.tsx  MonacoEditor.tsx  PDFViewer.tsx  ResumePreview.tsx
lib/: langfuse.ts  redis.ts  supabase.ts
pipeline/: Dockerfile  compiler.py  graph.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py  storage.py  test_compile.py
pipeline/nodes/: analyze_latex.py  cache.py  cache_and_store.py  compile.py  compress.py  compress_latex.py  critique.py  debate.py  generate.py  human_review.py  ingest.py  iterate.py  resolve.py
pipeline/personas/: ai_ml_researcher.md  ats_recruiter.md  expert.md  faang_bar_raiser.md  hiring_manager.md  principal_engineer.md  recruiter.md  startup_cto.md
pipeline/tests/: test_analyze_latex.py  test_compile_node.py  test_compress_latex.py  test_critique.py  test_debate.py  test_human_review.py  test_nodes.py  test_schemas.py
store/: resumeStore.test.ts  resumeStore.ts
supabase/migrations/: 001_pgvector.sql  002_personas_table.sql  003_update_resume_cache.sql
